[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simtime"
version = "0.2.0"
description = "A discrete-event simulation engine for time-based process benchmarking"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pandas>=1.3",
]

[project.urls]
Source = "https://github.com/mcolosi/simtime"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
